<?xml version="1.0" encoding="utf-8"?>
<resources>

<string name="app_name">TnT_v2</string>

<string name="navigation_drawer_open">Open navigation drawer</string>
<string name="navigation_drawer_close">Close navigation drawer</string>

<string name="action_settings">Settings</string>

<string name="tot">Total</string>
<string name="cancel">Cancel</string>
    <string name="refresh">Retrieve data</string>
<string name="save">Save</string>
    <string name="empty_list_text">No records found</string>
<string name="exp">type here!_test13</string>
<string name="spin">Choose Category Here!</string>
<string name="add_exp">Please Enter your expense here!!!!!</string>
<string name="rec">records found!</string>
<string name="showexp">Show list of Expenditure</string>

<string name="PREF_FILE">APP_PREF_FILE</string>

<string name="feedback_header">Thank you for trying out TnT. We hope you enjoyed using TnT as we did building it. Let us know your thoughts so that we can keep improving :)</string>
<string name="feedback_title_hint">Title</string>
<string name="feedback_desc_hint">Description</string>

<string name="action_feedback">Feedback</string>
<string name="action_send">Send</string>


<!-- Nav Drawer Menu Items -->
<string-array name="nav_drawer_items">
    <item >Home</item>
    <item >Overview</item>
    <item >History</item>
    <item >Income</item>
    <item >Expenditure</item>
    <item >Analysis</item>
</string-array>

<!-- Nav Drawer List Item Icons -->
<!-- Keep them in order as the titles are in -->
<array name="nav_drawer_icons">
    <item>@drawable/ic_home</item>
    <item>@drawable/ic_expenditure</item>
</array>

<!-- Content Description -->
<string name="desc_list_item_icon">Item Icon</string>

</resources>

