<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity= "center_horizontal"
    android:fitsSystemWindows="true">


    <TextView
        android:id ="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/ExpenseTrackerTextView"
        android:layout_marginTop="@dimen/dimen_30dp"
        android:text="@string/add_exp"
        android:textSize = "@dimen/text_size_18"/>


    <Spinner
        android:id="@+id/sp_categories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_20dp"
        android:layout_marginLeft="@dimen/dimen_20dp"
        android:layout_marginRight="@dimen/dimen_20dp"
        android:drawSelectorOnTop="true"
        android:prompt="@string/spin"
        android:entries="@array/spinnerItems"
        android:spinnerMode="dropdown" />


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        <EditText
            android:id="@+id/et_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_20dp"
            android:maxLines="2"
            android:hint="@string/exp"
            android:layout_marginLeft="@dimen/dimen_20dp"
            android:layout_marginRight="@dimen/dimen_20dp"
            style="@style/ExpenseTrackerEditText" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="@dimen/dimen_10_10dp"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:layout_marginRight="@dimen/dimen_20dp"
        android:layout_marginEnd="@dimen/dimen_20dp"
        android:layout_gravity="end"
        android:layout_height="wrap_content" >

    </android.support.design.widget.TextInputLayout>

    <EditText
        android:id="@+id/et_total"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:gravity="center"
        android:inputType="numberDecimal"
        android:hint="@string/tot"
        style="@style/ExpenseTrackerEditText"/>


    <LinearLayout
        android:layout_marginTop="@dimen/dimen_20dp"
        android:layout_marginBottom="@dimen/dimen_20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">



    </LinearLayout>

</LinearLayout>

