<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingTop="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="@dimen/activity_horizontal_margin"
    tools:context="com.example.android.tnt_v2.FeedbackActivity">

    <TextView
        android:id="@+id/feedback"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/feedback_header"
        android:gravity="center"
        android:layout_marginTop="24dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/feedbackTitle"
        android:layout_marginTop="15dp"
        android:hint="@string/feedback_title_hint"
        android:layout_below="@+id/feedback"
        android:textColor="@color/colorPrimary"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:textSize="15sp"
        android:id="@+id/feedbackDesc"
        android:layout_marginTop="15dp"
        android:hint="@string/feedback_desc_hint"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textColor="@color/colorPrimary"
        android:layout_below="@+id/feedbackTitle" />

</RelativeLayout>
